fixed return null with empty list